# rplint

./: .bumpversion.cfg  README.md  pyproject.toml  rplint.py  rplinter  tasks.py
dicts/: badphrases.txt  badwords.txt  capwords.txt  contractions.txt  syntaxhighlighters.txt
rplint/: __init__.py  __main__.py  checks.py  main.py
tests/: test_rplint.py
