[tool.poetry]
name = "rplint"
version = "0.2.0"
description = ""
authors = ["Jim Anderson <jima.coding@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bump2version = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
black = "^20.8b1"
invoke = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
