[tool.poetry]
name = "rplint"
version = "0.3.0"
description = ""
authors = ["Jim Anderson <jima.coding@gmail.com>", "Brad Solomon"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
black = "^20.8b1"
invoke = "^1.4.1"
bump2version = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
rplint = "rplint:rplint.main(prog_name=__package__)"
