[tool.poetry]
name = "rplint"
version = "0.8.0"
description = ""
authors = ["Jim Anderson <jima.coding@gmail.com>", "Brad Solomon", "Leodanis Pozo Ramos"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
invoke = "^2.2.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
rplint = "rplint.__main__:rplint"
